--- a/AUTHORS
+++ b/AUTHORS
@@ -296,6 +296,7 @@ Nick Lamb <lamb@cockroachlabs.com> <nicklamb@gmail.com>
 Nick Travers <travers@cockroachlabs.com>
 Nihal Pednekar <nihal@cockroachlabs.com> <pednekar.nihal@gmail.com>
 Nikhil Benesch <nikhil.benesch@gmail.com> <@cockroachlabs.com>
+Nikhil Chopra <chopra@cockroachlabs.com>
 Nishant Gupta <nishant.gupta@rubrik.com>
 noonan <noonan@noonan-vb-17.10-CDB>
 Oleg Afanasyev <oleg@cockroachlabs.com>
